--- a/src/assets/sass/components/_table.scss
+++ b/src/assets/sass/components/_table.scss
@@ -15,6 +15,9 @@
 				font-weight: 500;
 				height: 59px;
 				line-height: 59px;
+				@include breakpoint(max-xxl) {
+					height: 50px;
+				}
 				&:first-child {
 					text-align: left;
 					border-radius: 5px 0 0 0;
@@ -37,6 +40,9 @@
 				font-family: var(--heading-font);
 				color: #0D0A16;
 				height: 59px;
+				@include breakpoint(max-xxl) {
+					height: 50px;
+				}
 				&::before {
 					content: attr(data-label);
 					font-family: var(--heading-font);
