--- a/src/assets/sass/sections/_account.scss
+++ b/src/assets/sass/sections/_account.scss
@@ -40,10 +40,10 @@
 			width: 120px;
 			height: 120px;
 			margin-bottom: 30px;
-			@include breakpoint(max-md) {
+			@include breakpoint(max-xxl) {
 				margin-bottom: 20px;
-				width: 100px;
-				height: 100px;
+				width: 80px;
+				height: 80px;
 			}
 			@include breakpoint(max-sm) {
 				width: 80px;
@@ -65,8 +65,8 @@
 		&__title {
 			margin: 40px 0;
 			@include breakpoint(max-xxl) {
-				font-size: 60px;
-				margin: 30px 0;
+				font-size: 50px;
+				margin: 15px 0 20px;
 			}
 			@include breakpoint(max-xl) {
 				font-size: 46px;
@@ -76,6 +76,9 @@
 				font-size: 40px;
 				margin: 10px 0 25px;
 			}
+		}
+		&-thumb {
+			max-width: 300px;
 		}
 	}
 	&__right {
@@ -99,8 +102,8 @@
 .account-form-wrapper {
 	padding: 80px 40px;
 	box-shadow: 0 9px 90px 12px rgba(141, 158, 189, 0.12);
-	@include breakpoint(max-xl) {
-		padding: 60px 30px;
+	@include breakpoint(max-xxl) {
+		padding: 50px 30px;
 	}
 	@include breakpoint(max-sm) {
 		padding: 40px 20px;
@@ -147,9 +150,9 @@
 			transform: translateY(-50%);
 			right: 26px;
 			background-color: hsl(var(--white));
-			color: #CCCCCC;
+			color: #cccccc;
 			font-size: 18px;
-			@include breakpoint (max-sm) {
+			@include breakpoint(max-sm) {
 				right: 20px;
 			}
 		}
@@ -165,12 +168,12 @@
 		@extend %transition;
 		color: hsl(var(--dark) / 0.4);
 		font-size: 16px;
-	}      
+	}
 	.form--control {
 		height: 64px;
 		margin-top: 5px;
 		padding-inline: 22px;
-		@include breakpoint (max-sm) {
+		@include breakpoint(max-xxl) {
 			height: 60px;
 		}
 		&::-webkit-input-placeholder {
@@ -184,16 +187,17 @@
 		margin-top: 20px;
 		padding-top: 22px;
 		padding-bottom: 22px;
-		@include breakpoint (max-sm) {
+		@include breakpoint(max-xxl) {
 			padding-top: 20px;
 			padding-bottom: 20px;
+			margin-top: 0;
 		}
 	}
 }
 .sign-in {
 	.form--control {
 		padding-right: 60px;
-		@include breakpoint (max-sm) {
+		@include breakpoint(max-sm) {
 			padding-inline: 15px;
 			padding-right: 50px;
 			height: 60px;
@@ -201,4 +205,3 @@
 	}
 }
 // Account Section
-
